--- a/_posts/2015-06-17-vpn-ios8.md
+++ b/_posts/2015-06-17-vpn-ios8.md
@@ -7,17 +7,19 @@ tags: []
 ---
 {% include JB/setup %}
 
-如下图，打开`设置`。
-<img class="imgaligncenter" src="/images/vpn/1.png" width="60%" height="60%"/>
+### PPTP 配置
 
-可以看到类似下图的页面，找到`通用`并点击进入。
-<img class="imgaligncenter" src="/images/vpn/2.png" width="60%" height="60%"/>
+1. 如下图，打开`设置`。
+<img class="imgaligncenter" src="/images/vpn/1.png" width="80%" height="80%"/>
 
-拉到底部，找到`VPN`并点击进入。
-<img class="imgaligncenter" src="/images/vpn/3.png" width="60%" height="60%"/>
+2. 可以看到类似下图的页面，找到`通用`并点击进入。
+<img class="imgaligncenter" src="/images/vpn/2.png" width="80%" height="80%"/>
 
-点击`添加VPN配置…`
-<img class="imgaligncenter" src="/images/vpn/4.png" width="60%" height="60%"/>
+3. 拉到底部，找到`VPN`并点击进入。
+<img class="imgaligncenter" src="/images/vpn/3.png" width="80%" height="80%"/>
+
+4. 点击`添加VPN配置…`
+<img class="imgaligncenter" src="/images/vpn/4.png" width="80%" height="80%"/>
 
 按照图上的顺序操作：
 - 选择中间那个`PPTP`  
@@ -29,5 +31,31 @@ tags: []
 
 <img class="imgaligncenter" src="/images/vpn/5.png" width="60%" height="60%"/>
 
-回到`设置`首页，可以看到有个蓝色的VPN菜单了，点击打开过以后在顶部看到带框的`vpn`就代表成功了。
+5. 回到`设置`首页，可以看到有个蓝色的VPN菜单了，点击打开过以后在顶部看到带框的`vpn`就代表成功了。
 <img class="imgaligncenter" src="/images/vpn/6.png" width="60%" height="60%"/>
+
+### L2TP 配置
+
+1. 从`PPTP`配置的第四步开始，点了以后可以看到下图的配置：  
+<img class="imgaligncenter" src="/images/vpn/l2tp-1.png" width="80%" height="80%"/>
+
+1. 选择最左边的`L2TP`  
+2. 描述，比如：`L2TP`  
+3. 服务器填`lianming.me`  
+4. 账户填`你懂的`  
+5. 密码填`你懂的`  
+6. 密钥填`你懂的`（PPTP是没有密钥的）  
+7. 最后点右上角的`存储`
+
+2. 在`设置`首页的`VPN`菜单进入后可以看到下图所示：
+<img class="imgaligncenter" src="/images/vpn/l2tp-3.png" width="80%" height="80%"/>
+`L2TP`和`Vpn`两个🚪是可以相互切换的，选好🚪点2号位的按钮，顶部看到`VPN`图标代表连接成功。
+
+### 2个门的不同点
+
+`L2TP`更加安全，连接上以后很稳定，不太会掉线，但是更容易被运营商干扰（不容易连接，有时候还很慢）  
+`PPTP`速度快，容易连接，但是不够安全，容易掉线；
+
+
+
+
